--- a/auth-server/serverless.yml
+++ b/auth-server/serverless.yml
@@ -26,9 +26,9 @@ functions:
       - http:
           path: api/token/{code}
           method: get
-  getCalendarEvents():
-    handler: handler.getAccessToken
+  getCalendarEvents:
+    handler: handler.getCalendarEvents
     events:
       - http:
-          path: api/token/{code}
+          path: api/get-events/{access_token}
           method: get
